--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../pacote-projeto-d010/imagens/faviconp2.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../style/stylep2.css">
+    <link rel="stylesheet" href="style/stylep2.css">
     <title>Home</title>
 </head>
 <body>
